@@ -15,11 +15,15 @@ public class Swap implements TileAction {
 
   private static final Random DICE = new Random();
 
+  /***
+   * Swaps two random pieces
+   *
+   * @return swapped tiles
+   */
   @Override
   public Set<ChessTile> executeAction(ChessTile tile, ChessBoard board) throws EngineException {
     List<Piece> nonTargetPiece = tile.getPieces().stream()
-        .filter(Piece::isTargetPiece)
-        .collect(Collectors.toList());
+        .filter(Piece::isTargetPiece).toList();
 
     Set<ChessTile> updatedTiles = new HashSet<>();
     updatedTiles.add(tile);
@@ -34,15 +38,22 @@ public class Swap implements TileAction {
     return updatedTiles;
   }
 
+  /***
+   * Swaps two pieces on the board
+   *
+   * @param p1 to swap
+   * @param p2 to swap
+   * @param board to swap on
+   * @return second tile swapped
+   */
   private ChessTile swap(Piece p1, Piece p2, ChessBoard board)
       throws EngineException {
 
     Coordinate c1 = p1.getCoordinates();
     Coordinate c2 = p2.getCoordinates();
 
-    board.move(p1, c2);
-    board.move(p2, c1);
+    p1.updateCoordinates(board.getTile(c2), board);
+    p2.updateCoordinates(board.getTile(c1), board);
     return board.getTile(c2);
   }
-
 }
